--- a/global_css_js/global.css
+++ b/global_css_js/global.css
@@ -116,7 +116,6 @@ body::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
 /* #endregion */
-
 /* #region Grid item styles */
 .grid-item-design {
     padding: 10px;
@@ -149,6 +148,7 @@ body::-webkit-scrollbar-thumb:hover {
     font-weight: 500;
     letter-spacing: .85px;
     border: none;
+    white-space: nowrap;
 
 }
 
