--- a/inventory-interface/pages/dashboard/css/inventory_grid.css
+++ b/inventory-interface/pages/dashboard/css/inventory_grid.css
@@ -2,13 +2,17 @@
 /* #region Inventory grid designs */
 .inventory-grid {
     display: grid;
-    grid-template-columns: repeat(15, 1fr); 
+    grid-template-columns: repeat(16, 1fr); 
     gap: 20px;
     margin: 0;
     padding: 20px 20px 20px 100px;
     height: calc(100vh - 60px);
     grid-template-rows: 50px 120px 380px;
     overflow-y: auto;
+}
+
+.inventory-item:hover{
+    cursor: default;
 }
 
 /* #region Grid Layout*/
@@ -27,17 +31,17 @@
 }
 
 .im3{
-    grid-row-start: 2;
+    grid-row-start: 3;
     grid-row-end: 4;
-    grid-column-start: 9;
-    grid-column-end: 16;
+    grid-column-start: 8;
+    grid-column-end: 17;
 }
 
 .im4{
     grid-row-start: 3;
     grid-row-end: 4;
     grid-column-start: 1;
-    grid-column-end: 9;
+    grid-column-end: 8;
 }
 
 .im5{
@@ -59,6 +63,20 @@
     grid-row-end: 2;
     grid-column-start: 14;
     grid-column-end: 16;
+}
+
+.im8{
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 9;
+    grid-column-end: 13;
+}
+
+.im9{
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 13;
+    grid-column-end: 17;
 }
 
 /* #endregion */
@@ -110,7 +128,7 @@
     padding-right: 10px;
     font-size: 0.88rem;
     font-weight: 500;
-    height: 460px;
+    height: 260px;
     position: relative;
     padding-left: 10px;
     margin-top: 5px;
