--- a/inventory-interface/pages/dashboard/css/inventory_grid.css
+++ b/inventory-interface/pages/dashboard/css/inventory_grid.css
@@ -2,7 +2,7 @@
 /* #region Inventory grid designs */
 .inventory-grid {
     display: grid;
-    grid-template-columns: repeat(16, 1fr); 
+    grid-template-columns: repeat(15, 1fr); 
     gap: 20px;
     margin: 0;
     padding: 20px 20px 20px 100px;
@@ -31,17 +31,17 @@
 }
 
 .im3{
-    grid-row-start: 3;
+    grid-row-start: 2;
     grid-row-end: 4;
-    grid-column-start: 8;
-    grid-column-end: 17;
+    grid-column-start: 9;
+    grid-column-end: 16;
 }
 
 .im4{
     grid-row-start: 3;
     grid-row-end: 4;
     grid-column-start: 1;
-    grid-column-end: 8;
+    grid-column-end: 9;
 }
 
 .im5{
@@ -122,12 +122,72 @@
 
 /* #endregion */
 
-/* #region Inventory Movements History*/
-.im3 .container{
-    height: 310px;
-    width: 100%;
-    margin-top: 10px;
+/* #region Inventory Movements */
+.inventory-activities-container {
+    overflow-y: auto;
+    padding-right: 10px;
+    font-size: 0.88rem;
+    font-weight: 500;
+    height: 460px;
+    position: relative;
+    padding-left: 10px;
+    margin-top: 5px;
 }
+
+.inventory-activities-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+/* Header row with sticky position */
+.inventory-activities-header {
+    border-bottom: 1px solid #cecece;
+    position: sticky;
+    top: 0;
+    z-index: 4;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 10px;
+    font-weight: 500;
+    font-size: 1.02rem;
+    color: rgba(37, 37, 37, 0.911);
+}
+
+/* Each row for inventory activity */
+.inventory-activities-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 10px;
+    border-bottom: 1px solid #cecece;
+    font-family: 'Afacad Flux', sans-serif;
+    border-radius: 8px;
+    transition: background-color 0.2s, box-shadow 0.2s;
+    font-weight: 400;
+    font-size: .90rem;
+}
+
+/* Hover effect for rows */
+.inventory-activities-item:hover {
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+
+/* Columns alignment */
+.inventory-activities-header span,
+.inventory-activities-item span {
+    flex: 1; /* Ensure equal space distribution */
+    text-align: center; /* Center-align text */
+}
+
+.inventory-activities-header .inventory-activities-header-movement-id,
+.inventory-activities-item .movement-id {
+    text-align: center; /* Left-align Movement ID */
+}
+
 /* #endregion */
 
 /* #region Stock Levels */
