--- a/inventory-interface/pages/product_details/css/product_details.css
+++ b/inventory-interface/pages/product_details/css/product_details.css
@@ -362,10 +362,10 @@
 
 .modal-product-details > .modal-content{
     background: #fff;
-    padding: 20px;
+    padding: 30px 30px 5px 30px;
     border-radius: 10px;
-    height: 450px;
-    width: 700px;
+    height: 480px;
+    width: 390px;
     display: flex;
     flex-direction: row;
     margin-top: -70px;
@@ -377,109 +377,9 @@
     justify-content: space-between;
 }
 
-.mc-grid{
-    display: grid;
-    grid-template-columns: repeat(15, 1fr); 
-    gap: 15px;
-    margin: 0;
-    padding: 20px;
-    height: auto;
-    grid-template-rows: repeat(5, 50px);
-    width: 100%;
-
-}
-
-/* #region grid styles */
-
-/* Product ID */
-.mcgi-1 {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 1;
-    grid-column-end: 5;
-}
-
-/* Location */
-.mcgi-2 {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 1;
-    grid-column-end: 8;
-}
-
-/* Status */
-.mcgi-3 {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 13;
-    grid-column-end: 16;
-}
-
-/* Quantity */
-.mcgi-4 {
-    grid-row-start: 3;
-    grid-row-end: 4;
-    grid-column-start: 1;
-    grid-column-end: 6;
-}
-
-/* Reorder point */
-.mcgi-5 {
-    grid-row-start: 3;
-    grid-row-end: 4;
-    grid-column-start: 6;
-    grid-column-end: 11;
-}
-
-/* Supplier */
-.mcgi-6 {
-    grid-row-start: 3;
-    grid-row-end: 4;
-    grid-column-start: 11;
-    grid-column-end: 16;
-}
-
-/* Last Restocked */
-.mcgi-7 {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 8;
-    grid-column-end: 13;
-}
-
-/* Last Restocked */
-.mcgi-8 {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 10;
-    grid-column-end: 16;
-}
-
-/* Save button */
-.mcgi-9 {
-    grid-row-start:4;
-    grid-row-end: 5;
-    grid-column-start: 13;
-    grid-column-end: 16;
-}
-
-/* Cancel */
-.mcgi-10 {
-    grid-row-start:4;
-    grid-row-end: 5;
-    grid-column-start: 10;
-    grid-column-end: 13;
-}
-
-/* #endregion */
-
 /* #endregion  */
 
 /* #region Form styles */
-form{
-    width: 100%;
-}
-
 form .input-group{
     position: relative;
     width: 100%;
@@ -488,12 +388,11 @@ form .input-group{
 form .input-group label{
     position: absolute;
     top: 50%;
-    left: 15px;
+    right: 0;
     transform: translateY(-50%);
-    font-size: .7rem;
+    font-size: 1rem;
     letter-spacing: .5px;
-    text-transform:uppercase;
-    color: #45585c;
+    color: black;
     padding: 0 5px;
     pointer-events: none;
     transition: .3s;
@@ -501,51 +400,29 @@ form .input-group label{
 }
 
 form .input-group input{    
-    margin: 9px 0;
-    padding: 13px 15px;
-    color: black;
-    border-radius: 8px;
-    background-color: #c3dadf;
+    padding: 13px 0 10px 0;
+    background-color: white;
     border: 1px solid transparent;
     width: 100%;
-    height: 40px;
+    height: 45px;
     outline: none;
-    transition: border-color 0.3s;
-}
-
-/* Password visibility */
-.toggle-password svg{
-    position: absolute;
-    top: 52%;
-    right: 10px;
-    transform: translateY(-50%);
-    cursor: pointer;
-    transition: opacity 0.2s ease;
-    fill: rgba(0, 0, 0, 0.349);
-    width: 22px;
-    height: 22px;
-    display: none;
-    background-color: none;
-}
-
-.toggle-password svg:hover{
-    fill: #022a35b7;
+    text-align: right;
+    font-size: 1.03rem;
+    color: red;
+    font-weight: 500;
 }
 
 /* label upon click */
 form .input-group input:focus + label,
 form .input-group input:not(:placeholder-shown) + label {
-    top: 8px;
-    left: 8px;
+    top: 4px;
+    right: 0px;
     background: white;
-    color: #022a35;
+    font-size: .85rem;
 }
 
 /* input upon click */
-.input-group input:focus {
-    background-color: white;
-    border: 1px solid #022a35;
-}
+
 
 .input-group input.has-value {
     background-color: white;
@@ -566,31 +443,60 @@ form .input-group input.has-error + label {
 
 /* #endregion */
 
-
-.modal {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
-    padding: 20px;
-    border-radius: 8px;
-}
-
-.modal-overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
+/* #region */
+form{
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
+    display: flex;
+    flex-direction: column;
 }
 
-.product-details-container li {
-    cursor: pointer;
+form > div:not(:last-child){
+    border-bottom: 1px solid #cecece;
+   
 }
+
+form > div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+}
+
+form > div span{
+    white-space: nowrap;
+}
+
+form > div:first-child{
+    border-bottom: 2px solid #cecece;
+    display: flex;
+    align-items: center;
+    padding-bottom: 10px;
+}
+
+form > div:not(:first-child) span:first-child{
+    font-size: 1.15rem;
+    font-weight: 500;
+}
+
+
+.prod-m{
+    font-weight: 700;
+    font-size: 1.5rem;
+    text-align: center;
+    justify-content: center;
+}
+
+.save{
+    justify-content: center;
+    background-color: rgb(224, 31, 31);
+    border-radius: 20px;
+    margin: 15px 30px;
+    height: 100%;
+    color: rgb(235, 235, 235);
+}
+
+.save:hover{
+    cursor: pointer;
+    background-color: rgb(190, 29, 29);
+}
+/* #endregion */
