--- a/inventory-interface/pages/product_details/css/product_details.css
+++ b/inventory-interface/pages/product_details/css/product_details.css
@@ -204,7 +204,7 @@
     font-weight: 400;
     border-radius: 10px;
     margin-top: 15px;
-    margin-left: 110px;
+    margin-left: 90px;
     margin-right: -60px;
     border: 1px solid #02242e;
 }
@@ -442,9 +442,17 @@ form .input-group input:not(:placeholder-shown) + label {
     border: 1px solid #022a35;
 }
 
+/* Hide the up and down arrows (spinners) on number input fields */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
 /* #endregion */
 
-/* #region */
+/* #region Form*/
 form{
     width: 100%;
     display: flex;
@@ -521,7 +529,6 @@ form > div:not(:first-child) span:first-child{
 }
 /* #endregion */
 
-
 /* #region confirm changes */
 #confirmationModal .button-container{
     display: flex;
@@ -575,10 +582,6 @@ form > div:not(:first-child) span:first-child{
 
 /* #endregion */
 
-/* Hide the up and down arrows (spinners) on number input fields */
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
+/* #region */
 
+/* #endregion */
