--- a/inventory-interface/pages/product_details/css/product_details.css
+++ b/inventory-interface/pages/product_details/css/product_details.css
@@ -547,6 +547,11 @@ form > div:not(:first-child) span:first-child{
     background-color: grey; 
     cursor: not-allowed; 
 }
+
+.save.hide > button{
+    display: none;
+}
+
 /* #endregion */
 
 /* #region confirm changes */
