--- a/global_css_js/global.css
+++ b/global_css_js/global.css
@@ -202,7 +202,7 @@ body::-webkit-scrollbar-thumb:hover {
     margin: 0;
     padding: 40px 40px 40px 120px;
     height: calc(100vh - 60px);
-    grid-template-rows: 270px 130px 210px;
+    grid-template-rows: 270px 40px 260px;
     overflow-y: auto;
 }
 /* #endregion */
@@ -211,13 +211,6 @@ body::-webkit-scrollbar-thumb:hover {
 /* Search */
 .aig1 {
     grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 1;
-    grid-column-end: 6;
-}
-
-.aig2 {
-    grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 1;
     grid-column-end: 6;
@@ -242,7 +235,7 @@ body::-webkit-scrollbar-thumb:hover {
     border-radius: 8px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .aig-title {
@@ -267,17 +260,31 @@ body::-webkit-scrollbar-thumb:hover {
 
 .row-item{
     width: 100%;
-    height: 70px;
-    background-color: rgba(174, 174, 228, 0.527);
+    height: 80px;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
 }
 
-.double{
-    display: flex;
+.row-item.double{
     flex-direction: row;
     justify-content: space-between;
 }
+
+.row-item.double > div{
+    width: 100%;
+}
+
+.row-item > .input-title,
+.row-item > div > .input-title{
+    font-size: 1rem;
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    color: rgb(97, 97, 97);
+    margin-bottom: 2px;
+}
+
 
 /* #region Button */
 .update{
@@ -296,7 +303,7 @@ body::-webkit-scrollbar-thumb:hover {
     letter-spacing: 1px;
     text-transform: uppercase;
     cursor: pointer;
-    width: 30%;
+    width: 220px;
 }
 
 .update > button:not(:last-child){
@@ -314,8 +321,6 @@ body::-webkit-scrollbar-thumb:hover {
     background-color: #063746;
 }
 
-
-
 .update > button[disabled] { 
     background-color: grey; 
     cursor: not-allowed; 
@@ -323,9 +328,18 @@ body::-webkit-scrollbar-thumb:hover {
 /* #endregion */
 
 /* #region Form styles */
-#updateaccountdetialsForm .input-group{
+#updateaccountdetialsForm .input-group-aig{
     position: relative;
-    width: 200px;
+    width: 100%;
+}
+
+#updateaccountdetialsForm > div{
+    border: none;
+}
+
+#updateaccountdetialsForm > div:first-child{
+    border: none;
+    padding: 0 10px;
 }
 
 /* #region Placeholder*/
@@ -342,46 +356,44 @@ body::-webkit-scrollbar-thumb:hover {
 }
 /* #endregion */
 
-#updateaccountdetialsForm .input-group label{
+#updateaccountdetialsForm .input-group-aig label{
     position: absolute;
-    top: 50%;
-    left: 15px;
+    top: 54%;
+    left: 10px;
     transform: translateY(-50%);
-    font-size: 1rem;
+    font-size: .94rem;
     letter-spacing: .5px;
-    color: black;
+    color: rgba(0, 0, 0, 0.61);
     padding: 0 8px;
     pointer-events: none;
     transition: .3s;
-    border-radius: 40px;
+    padding: 0px 10px;
 }
 
-#updateaccountdetialsForm .input-group input{    
-    padding: 13px 0 10px 0;
-    background-color: white;
-    border: 1px solid transparent;
+#updateaccountdetialsForm .input-group-aig input{    
+    padding: 15px;
+    background-color: #f0f0f0;
+    border: 1px solid rgb(161, 161, 161);
     width: 100%;
-    height: 45px;
+    height: 50px;
     outline: none;
     text-align: left;
-    font-size: 1.03rem;
-    color: red;
+    font-size: 1rem;
+    color: black;
     font-weight: 500;
-    margin: 9px 0;
+    margin: 4px 0 0 0;
     padding: 13px 15px;
+    border-radius: 5px;
 }
 
 /* label upon click */
-#updateaccountdetialsForm .input-group input:focus + label,
-#updateaccountdetialsForm .input-group input:not(:placeholder-shown) + label {
-    top: 4px;
-    left: 0px;
-    background: white;
-    font-size: .85rem;
-}
-#updateaccountdetialsForm .input-group input.has-value {
-    background-color: white;
-    border: 1px solid #022a35;
+#updateaccountdetialsForm .input-group-aig input:focus + label,
+#updateaccountdetialsForm .input-group-aig input:not(:placeholder-shown) + label {
+    top: 5px;
+    left: 5px;
+    background: #f0f0f0;
+    font-size: .90rem;
+    padding: 0px 5px;
 }
 
 /* #endregion */
