--- a/global_css_js/global.css
+++ b/global_css_js/global.css
@@ -116,6 +116,7 @@ body::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
 /* #endregion */
+
 /* #region Grid item styles */
 .grid-item-design {
     padding: 10px;
@@ -139,6 +140,8 @@ body::-webkit-scrollbar-thumb:hover {
     margin-left: 10px;
     margin-top: 5px;
 }
+
+/* #endregion */
 
 /* #region Title style*/
 .grid-item-design.title{
@@ -194,7 +197,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 /* #endregion */
 
-/* #region Inventory grid designs */
+/* #region account grid designs */
 .account-information-grid {
     display: grid;
     grid-template-columns: repeat(17, 1fr); 
@@ -202,7 +205,7 @@ body::-webkit-scrollbar-thumb:hover {
     margin: 0;
     padding: 40px 40px 40px 120px;
     height: calc(100vh - 60px);
-    grid-template-rows: 270px 40px 270px;
+    grid-template-rows: 300px 40px 230px;
     overflow-y: auto;
 }
 /* #endregion */
@@ -248,7 +251,7 @@ body::-webkit-scrollbar-thumb:hover {
     letter-spacing: .5px;
     font-weight: 500;
     border-radius: 7px 7px 0 0;
-    padding: 20px 25px;
+    padding: 10px 20px;
 }
 /* #endregion */
 
@@ -513,3 +516,96 @@ body::-webkit-scrollbar-thumb:hover {
 
 /* #endregion */
 
+/* #region Profile picture form */
+#updateprofilepicture{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+#updateprofilepicture > div{
+    border: none;
+}
+
+#updateprofilepicture .message{
+    font-size: 1rem;
+    font-weight: 500;
+    color: #02242e9d;
+    margin: 10px 0;
+}
+
+#updateprofilepicture .profilepreviewcontainer img{
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    background-color: rgba(14, 69, 100, 0.39);
+}
+
+#updateprofilepicture .profilepreviewcontainer img:hover{
+    cursor: pointer;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
+    transform: translateY(-2px);
+    transform: scale(1.02);
+}
+
+/* #region Button */
+
+.profilepicbuttoncontainer{
+    justify-content: center;
+}
+
+.profilepicbuttoncontainer > #uploadButton{
+    font-family: 'Afacad Flux', sans-serif;
+    background-color: #062f3dc5;
+    font-weight: 600;
+    color: white;
+    font-size: .78rem;
+    padding: 8px 15px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.profilepicbuttoncontainer > #uploadButton:hover{
+    cursor: pointer;
+    background-color: #063746;
+}
+
+.profilepicbuttoncontainer > #uploadButton[disabled] { 
+    background-color: grey; 
+    cursor: not-allowed; 
+}
+
+.profilepicbuttoncontainer > #reverttooriginal{
+    background-color: #062f3dc5;
+    font-weight: 600;
+    color: white;
+    font-size: .78rem;
+    padding: 5px 10px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-left: 15px;
+    display: none;
+}
+
+.profilepicbuttoncontainer > #reverttooriginal.show{
+    display: block;
+}
+
+.profilepicbuttoncontainer > #reverttooriginal svg{
+    fill: white;
+    height: 20px;
+    width: 20px;
+}
+
+.profilepicbuttoncontainer > #reverttooriginal:hover{
+    cursor: pointer;
+    background-color: #063746;
+}
+
+/* #endregion */
+
+/* #endregion */
