--- a/inventory-interface/pages/dashboard/css/inventory_grid.css
+++ b/inventory-interface/pages/dashboard/css/inventory_grid.css
@@ -152,6 +152,7 @@
     padding: 5px 10px;
     font-weight: 600;
     font-size: 1.02rem;
+    background-color: #f1f1f1;
 }
 
 /* Each row for inventory activity */
